test/fail/basic_syntax/break_outside_loop.lily
#[
SyntaxError: 'break' used outside of a loop.
    from break_outside_loop.lily:6:
]#

break
